--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head><style>body {
     width: 47%;
+    color: red;
     display: block;
     margin: auto;
     text-align: justify;
